--- a/src/index.css
+++ b/src/index.css
@@ -130,10 +130,6 @@
   /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 
-/* FONTS */
-
-/* STYLE */
-
 :root {
   --color-rose-400: #ad8a85;
   --color-red: #c73b0f;
@@ -151,7 +147,7 @@
 
 body {
   font-family: var(--font-family);
-  background-color: var(--color-background);
+  background-color: #dee2e6;
   height: 100vh;
 }
 
@@ -511,6 +507,56 @@ h2 {
 .btn {
   width: 100%;
   display: block;
+}
+
+.order-confirmed {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.order-confirmed-modal {
+  background: white;
+  padding: 20px;
+  border-radius: 10px;
+  position: relative;
+  width: 400px;
+  text-align: center;
+}
+
+.close-btn {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  background: white;
+  border: none;
+  font-size: 24px;
+  cursor: pointer;
+  color: #8b8b8b;
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background 0.3s ease, color 0.3s ease;
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.1);
+}
+
+.close-btn:hover {
+  background: #ff4d4d;
+  color: white;
+}
+
+.close-btn svg {
+  width: 20px;
+  height: 20px;
 }
 
 @media (max-width: 930px) {
