--- a/src/index.css
+++ b/src/index.css
@@ -530,33 +530,9 @@ h2 {
   text-align: center;
 }
 
-.close-btn {
-  position: absolute;
-  top: 20px;
-  right: 20px;
-  background: white;
-  border: none;
-  font-size: 24px;
-  cursor: pointer;
-  color: #8b8b8b;
-  width: 35px;
-  height: 35px;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: background 0.3s ease, color 0.3s ease;
-  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.1);
-}
-
-.close-btn:hover {
-  background: #ff4d4d;
-  color: white;
-}
-
-.close-btn svg {
-  width: 20px;
-  height: 20px;
+.item-quantity {
+  color: rgb(216, 0, 0);
+  font-weight: bold;
 }
 
 @media (max-width: 930px) {
